<resources>
    <string name="app_name">Toyoda_Calculator</string>
//numbers
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
//others
    <string name="clear">C</string>
    <string name="openParenthesis">(</string>
    <string name="closeParenthesis">)</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="percent">%</string>

    <string name="backspace"> </string>
    
    <string name="input">""</string>

</resources>